fix : Text align : Delete swatch text

--- a/src/components/edit-icon/edit-icon-color-selector/edit-icon-color-selector.module.css
+++ b/src/components/edit-icon/edit-icon-color-selector/edit-icon-color-selector.module.css
@@ -40,9 +40,10 @@
   row-gap: 6.5px;
 }
 .deleteMessage {
+  bottom: 5px;
   color: var(--app-user-display-text);
   font-size: 9px;
   letter-spacing: 0;
   position: relative;
-  bottom: 5px;
+  text-align: center;
 }
